parser.out
Grammar:

Rule 0     S' -> statements
Rule 1     statements -> stmt
Rule 2     statements -> statements stmt
Rule 3     stmt -> print_stmt
Rule 4     stmt -> assign_expr
Rule 5     stmt -> for_stmt
Rule 6     stmt -> while_stmt
Rule 7     stmt -> if_stmt
Rule 8     stmt -> RETURN expr ;
Rule 9     stmt -> CONTINUE ;
Rule 10    stmt -> BREAK ;
Rule 11    stmt -> { statements }
Rule 12    stmt -> ;
Rule 13    if_stmt -> IF ( relation_expr ) stmt  [precedence=nonassoc, level=1]
Rule 14    if_stmt -> IF ( relation_expr ) stmt ELSE stmt  [precedence=nonassoc, level=2]
Rule 15    while_stmt -> WHILE ( relation_expr ) stmt
Rule 16    for_stmt -> FOR ID = id_int : id_int stmt
Rule 17    id_int -> INTNUM
Rule 18    id_int -> ID
Rule 19    print_stmt -> PRINT print_rek ;
Rule 20    print_rek -> expr
Rule 21    print_rek -> print_rek , expr
Rule 22    value -> STRING
Rule 23    value -> ID
Rule 24    value -> FLOAT
Rule 25    value -> INTNUM
Rule 26    expr -> expr DOTDIV expr  [precedence=left, level=5]
Rule 27    expr -> expr DOTMUL expr  [precedence=left, level=5]
Rule 28    expr -> expr DOTSUB expr  [precedence=left, level=4]
Rule 29    expr -> expr DOTADD expr  [precedence=left, level=4]
Rule 30    expr -> expr DIV expr  [precedence=left, level=5]
Rule 31    expr -> expr MUL expr  [precedence=left, level=5]
Rule 32    expr -> expr SUB expr  [precedence=left, level=4]
Rule 33    expr -> expr ADD expr  [precedence=left, level=4]
Rule 34    expr -> [ string_of_num ]
Rule 35    expr -> [ matrix_rows ]
Rule 36    expr -> ( expr )
Rule 37    expr -> expr '  [precedence=nonassoc, level=7]
Rule 38    expr -> SUB expr  [precedence=right, level=6]
Rule 39    expr -> matrix_ref
Rule 40    expr -> matrix_funcs
Rule 41    expr -> relation_expr
Rule 42    expr -> assign_expr
Rule 43    expr -> value
Rule 44    assign_expr -> id_ref DIVASSIGN expr ;
Rule 45    assign_expr -> id_ref MULASSIGN expr ;
Rule 46    assign_expr -> id_ref SUBASSIGN expr ;
Rule 47    assign_expr -> id_ref ADDASSIGN expr ;
Rule 48    assign_expr -> id_ref = expr ;
Rule 49    id_ref -> matrix_ref
Rule 50    id_ref -> ID
Rule 51    relation_expr -> expr NEQ expr  [precedence=nonassoc, level=3]
Rule 52    relation_expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 53    relation_expr -> expr GTE expr  [precedence=nonassoc, level=3]
Rule 54    relation_expr -> expr LTE expr  [precedence=nonassoc, level=3]
Rule 55    relation_expr -> expr GT expr  [precedence=nonassoc, level=3]
Rule 56    relation_expr -> expr LT expr  [precedence=nonassoc, level=3]
Rule 57    matrix_funcs -> EYE ( INTNUM )
Rule 58    matrix_funcs -> ONES ( INTNUM )
Rule 59    matrix_funcs -> ZEROS ( INTNUM )
Rule 60    matrix_ref -> ID [ string_of_num ]
Rule 61    matrix_rows -> matrix_rows , [ string_of_num ]
Rule 62    matrix_rows -> [ string_of_num ]
Rule 63    string_of_num -> string_of_num , INTNUM
Rule 64    string_of_num -> INTNUM

Terminals, with rules where they appear:

'                    : 37
(                    : 13 14 15 36 57 58 59
)                    : 13 14 15 36 57 58 59
,                    : 21 61 63
:                    : 16
;                    : 8 9 10 12 19 44 45 46 47 48
=                    : 16 48
ADD                  : 33
ADDASSIGN            : 47
BREAK                : 10
CONTINUE             : 9
DIV                  : 30
DIVASSIGN            : 44
DOTADD               : 29
DOTDIV               : 26
DOTMUL               : 27
DOTSUB               : 28
ELSE                 : 14
EQ                   : 52
EYE                  : 57
FLOAT                : 24
FOR                  : 16
GT                   : 55
GTE                  : 53
ID                   : 16 18 23 50 60
IF                   : 13 14
INTNUM               : 17 25 57 58 59 63 64
LT                   : 56
LTE                  : 54
MUL                  : 31
MULASSIGN            : 45
NEQ                  : 51
ONES                 : 58
PRINT                : 19
RETURN               : 8
STRING               : 22
SUB                  : 32 38
SUBASSIGN            : 46
WHILE                : 15
ZEROS                : 59
[                    : 34 35 60 61 62
]                    : 34 35 60 61 62
error                : 
{                    : 11
}                    : 11

Nonterminals, with rules where they appear:

assign_expr          : 4 42
expr                 : 8 20 21 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 36 37 38 44 45 46 47 48 51 51 52 52 53 53 54 54 55 55 56 56
for_stmt             : 5
id_int               : 16 16
id_ref               : 44 45 46 47 48
if_stmt              : 7
matrix_funcs         : 40
matrix_ref           : 39 49
matrix_rows          : 35 61
print_rek            : 19 21
print_stmt           : 3
relation_expr        : 13 14 15 41
statements           : 2 11 0
stmt                 : 1 2 13 14 14 15 16
string_of_num        : 34 60 61 62 63
value                : 43
while_stmt           : 6


state 0

    (0) S' -> . statements
    (1) statements -> . stmt
    (2) statements -> . statements stmt
    (3) stmt -> . print_stmt
    (4) stmt -> . assign_expr
    (5) stmt -> . for_stmt
    (6) stmt -> . while_stmt
    (7) stmt -> . if_stmt
    (8) stmt -> . RETURN expr ;
    (9) stmt -> . CONTINUE ;
    (10) stmt -> . BREAK ;
    (11) stmt -> . { statements }
    (12) stmt -> . ;
    (19) print_stmt -> . PRINT print_rek ;
    (44) assign_expr -> . id_ref DIVASSIGN expr ;
    (45) assign_expr -> . id_ref MULASSIGN expr ;
    (46) assign_expr -> . id_ref SUBASSIGN expr ;
    (47) assign_expr -> . id_ref ADDASSIGN expr ;
    (48) assign_expr -> . id_ref = expr ;
    (16) for_stmt -> . FOR ID = id_int : id_int stmt
    (15) while_stmt -> . WHILE ( relation_expr ) stmt
    (13) if_stmt -> . IF ( relation_expr ) stmt
    (14) if_stmt -> . IF ( relation_expr ) stmt ELSE stmt
    (49) id_ref -> . matrix_ref
    (50) id_ref -> . ID
    (60) matrix_ref -> . ID [ string_of_num ]
    RETURN          shift and go to state 8
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    {               shift and go to state 12
    ;               shift and go to state 9
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    statements                     shift and go to state 1
    stmt                           shift and go to state 2
    print_stmt                     shift and go to state 3
    assign_expr                    shift and go to state 4
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    id_ref                         shift and go to state 14
    matrix_ref                     shift and go to state 19

state 1

    (0) S' -> statements .
    (2) statements -> statements . stmt
    (3) stmt -> . print_stmt
    (4) stmt -> . assign_expr
    (5) stmt -> . for_stmt
    (6) stmt -> . while_stmt
    (7) stmt -> . if_stmt
    (8) stmt -> . RETURN expr ;
    (9) stmt -> . CONTINUE ;
    (10) stmt -> . BREAK ;
    (11) stmt -> . { statements }
    (12) stmt -> . ;
    (19) print_stmt -> . PRINT print_rek ;
    (44) assign_expr -> . id_ref DIVASSIGN expr ;
    (45) assign_expr -> . id_ref MULASSIGN expr ;
    (46) assign_expr -> . id_ref SUBASSIGN expr ;
    (47) assign_expr -> . id_ref ADDASSIGN expr ;
    (48) assign_expr -> . id_ref = expr ;
    (16) for_stmt -> . FOR ID = id_int : id_int stmt
    (15) while_stmt -> . WHILE ( relation_expr ) stmt
    (13) if_stmt -> . IF ( relation_expr ) stmt
    (14) if_stmt -> . IF ( relation_expr ) stmt ELSE stmt
    (49) id_ref -> . matrix_ref
    (50) id_ref -> . ID
    (60) matrix_ref -> . ID [ string_of_num ]
    RETURN          shift and go to state 8
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    {               shift and go to state 12
    ;               shift and go to state 9
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    stmt                           shift and go to state 20
    print_stmt                     shift and go to state 3
    assign_expr                    shift and go to state 4
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    id_ref                         shift and go to state 14
    matrix_ref                     shift and go to state 19

state 2

    (1) statements -> stmt .
    RETURN          reduce using rule 1 (statements -> stmt .)
    CONTINUE        reduce using rule 1 (statements -> stmt .)
    BREAK           reduce using rule 1 (statements -> stmt .)
    {               reduce using rule 1 (statements -> stmt .)
    ;               reduce using rule 1 (statements -> stmt .)
    PRINT           reduce using rule 1 (statements -> stmt .)
    FOR             reduce using rule 1 (statements -> stmt .)
    WHILE           reduce using rule 1 (statements -> stmt .)
    IF              reduce using rule 1 (statements -> stmt .)
    ID              reduce using rule 1 (statements -> stmt .)
    $end            reduce using rule 1 (statements -> stmt .)
    }               reduce using rule 1 (statements -> stmt .)


state 3

    (3) stmt -> print_stmt .
    RETURN          reduce using rule 3 (stmt -> print_stmt .)
    CONTINUE        reduce using rule 3 (stmt -> print_stmt .)
    BREAK           reduce using rule 3 (stmt -> print_stmt .)
    {               reduce using rule 3 (stmt -> print_stmt .)
    ;               reduce using rule 3 (stmt -> print_stmt .)
    PRINT           reduce using rule 3 (stmt -> print_stmt .)
    FOR             reduce using rule 3 (stmt -> print_stmt .)
    WHILE           reduce using rule 3 (stmt -> print_stmt .)
    IF              reduce using rule 3 (stmt -> print_stmt .)
    ID              reduce using rule 3 (stmt -> print_stmt .)
    $end            reduce using rule 3 (stmt -> print_stmt .)
    }               reduce using rule 3 (stmt -> print_stmt .)
    ELSE            reduce using rule 3 (stmt -> print_stmt .)


state 4

    (4) stmt -> assign_expr .
    RETURN          reduce using rule 4 (stmt -> assign_expr .)
    CONTINUE        reduce using rule 4 (stmt -> assign_expr .)
    BREAK           reduce using rule 4 (stmt -> assign_expr .)
    {               reduce using rule 4 (stmt -> assign_expr .)
    ;               reduce using rule 4 (stmt -> assign_expr .)
    PRINT           reduce using rule 4 (stmt -> assign_expr .)
    FOR             reduce using rule 4 (stmt -> assign_expr .)
    WHILE           reduce using rule 4 (stmt -> assign_expr .)
    IF              reduce using rule 4 (stmt -> assign_expr .)
    ID              reduce using rule 4 (stmt -> assign_expr .)
    $end            reduce using rule 4 (stmt -> assign_expr .)
    }               reduce using rule 4 (stmt -> assign_expr .)
    ELSE            reduce using rule 4 (stmt -> assign_expr .)


state 5

    (5) stmt -> for_stmt .
    RETURN          reduce using rule 5 (stmt -> for_stmt .)
    CONTINUE        reduce using rule 5 (stmt -> for_stmt .)
    BREAK           reduce using rule 5 (stmt -> for_stmt .)
    {               reduce using rule 5 (stmt -> for_stmt .)
    ;               reduce using rule 5 (stmt -> for_stmt .)
    PRINT           reduce using rule 5 (stmt -> for_stmt .)
    FOR             reduce using rule 5 (stmt -> for_stmt .)
    WHILE           reduce using rule 5 (stmt -> for_stmt .)
    IF              reduce using rule 5 (stmt -> for_stmt .)
    ID              reduce using rule 5 (stmt -> for_stmt .)
    $end            reduce using rule 5 (stmt -> for_stmt .)
    }               reduce using rule 5 (stmt -> for_stmt .)
    ELSE            reduce using rule 5 (stmt -> for_stmt .)


state 6

    (6) stmt -> while_stmt .
    RETURN          reduce using rule 6 (stmt -> while_stmt .)
    CONTINUE        reduce using rule 6 (stmt -> while_stmt .)
    BREAK           reduce using rule 6 (stmt -> while_stmt .)
    {               reduce using rule 6 (stmt -> while_stmt .)
    ;               reduce using rule 6 (stmt -> while_stmt .)
    PRINT           reduce using rule 6 (stmt -> while_stmt .)
    FOR             reduce using rule 6 (stmt -> while_stmt .)
    WHILE           reduce using rule 6 (stmt -> while_stmt .)
    IF              reduce using rule 6 (stmt -> while_stmt .)
    ID              reduce using rule 6 (stmt -> while_stmt .)
    $end            reduce using rule 6 (stmt -> while_stmt .)
    }               reduce using rule 6 (stmt -> while_stmt .)
    ELSE            reduce using rule 6 (stmt -> while_stmt .)


state 7

    (7) stmt -> if_stmt .
    RETURN          reduce using rule 7 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 7 (stmt -> if_stmt .)
    BREAK           reduce using rule 7 (stmt -> if_stmt .)
    {               reduce using rule 7 (stmt -> if_stmt .)
    ;               reduce using rule 7 (stmt -> if_stmt .)
    PRINT           reduce using rule 7 (stmt -> if_stmt .)
    FOR             reduce using rule 7 (stmt -> if_stmt .)
    WHILE           reduce using rule 7 (stmt -> if_stmt .)
    IF              reduce using rule 7 (stmt -> if_stmt .)
    ID              reduce using rule 7 (stmt -> if_stmt .)
    $end            reduce using rule 7 (stmt -> if_stmt .)
    }               reduce using rule 7 (stmt -> if_stmt .)
    ELSE            reduce using rule 7 (stmt -> if_stmt .)


state 8

    (8) stmt -> RETURN . expr ;
    (26) expr -> . expr DOTDIV expr
    (27) expr -> . expr DOTMUL expr
    (28) expr -> . expr DOTSUB expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DIV expr
    (31) expr -> . expr MUL expr
    (32) expr -> . expr SUB expr
    (33) expr -> . expr ADD expr
    (34) expr -> . [ string_of_num ]
    (35) expr -> . [ matrix_rows ]
    (36) expr -> . ( expr )
    (37) expr -> . expr '
    (38) expr -> . SUB expr
    (39) expr -> . matrix_ref
    (40) expr -> . matrix_funcs
    (41) expr -> . relation_expr
    (42) expr -> . assign_expr
    (43) expr -> . value
    (60) matrix_ref -> . ID [ string_of_num ]
    (57) matrix_funcs -> . EYE ( INTNUM )
    (58) matrix_funcs -> . ONES ( INTNUM )
    (59) matrix_funcs -> . ZEROS ( INTNUM )
    (51) relation_expr -> . expr NEQ expr
    (52) relation_expr -> . expr EQ expr
    (53) relation_expr -> . expr GTE expr
    (54) relation_expr -> . expr LTE expr
    (55) relation_expr -> . expr GT expr
    (56) relation_expr -> . expr LT expr
    (44) assign_expr -> . id_ref DIVASSIGN expr ;
    (45) assign_expr -> . id_ref MULASSIGN expr ;
    (46) assign_expr -> . id_ref SUBASSIGN expr ;
    (47) assign_expr -> . id_ref ADDASSIGN expr ;
    (48) assign_expr -> . id_ref = expr ;
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOAT
    (25) value -> . INTNUM
    (49) id_ref -> . matrix_ref
    (50) id_ref -> . ID
    [               shift and go to state 23
    (               shift and go to state 24
    SUB             shift and go to state 22
    ID              shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    INTNUM          shift and go to state 32

    expr                           shift and go to state 21
    matrix_ref                     shift and go to state 25
    matrix_funcs                   shift and go to state 26
    relation_expr                  shift and go to state 27
    assign_expr                    shift and go to state 28
    value                          shift and go to state 29
    id_ref                         shift and go to state 14

state 9

    (12) stmt -> ; .
    RETURN          reduce using rule 12 (stmt -> ; .)
    CONTINUE        reduce using rule 12 (stmt -> ; .)
    BREAK           reduce using rule 12 (stmt -> ; .)
    {               reduce using rule 12 (stmt -> ; .)
    ;               reduce using rule 12 (stmt -> ; .)
    PRINT           reduce using rule 12 (stmt -> ; .)
    FOR             reduce using rule 12 (stmt -> ; .)
    WHILE           reduce using rule 12 (stmt -> ; .)
    IF              reduce using rule 12 (stmt -> ; .)
    ID              reduce using rule 12 (stmt -> ; .)
    $end            reduce using rule 12 (stmt -> ; .)
    }               reduce using rule 12 (stmt -> ; .)
    ELSE            reduce using rule 12 (stmt -> ; .)


state 10

    (9) stmt -> CONTINUE . ;
    ;               shift and go to state 37


state 11

    (10) stmt -> BREAK . ;
    ;               shift and go to state 38


state 12

    (11) stmt -> { . statements }
    (1) statements -> . stmt
    (2) statements -> . statements stmt
    (3) stmt -> . print_stmt
    (4) stmt -> . assign_expr
    (5) stmt -> . for_stmt
    (6) stmt -> . while_stmt
    (7) stmt -> . if_stmt
    (8) stmt -> . RETURN expr ;
    (9) stmt -> . CONTINUE ;
    (10) stmt -> . BREAK ;
    (11) stmt -> . { statements }
    (12) stmt -> . ;
    (19) print_stmt -> . PRINT print_rek ;
    (44) assign_expr -> . id_ref DIVASSIGN expr ;
    (45) assign_expr -> . id_ref MULASSIGN expr ;
    (46) assign_expr -> . id_ref SUBASSIGN expr ;
    (47) assign_expr -> . id_ref ADDASSIGN expr ;
    (48) assign_expr -> . id_ref = expr ;
    (16) for_stmt -> . FOR ID = id_int : id_int stmt
    (15) while_stmt -> . WHILE ( relation_expr ) stmt
    (13) if_stmt -> . IF ( relation_expr ) stmt
    (14) if_stmt -> . IF ( relation_expr ) stmt ELSE stmt
    (49) id_ref -> . matrix_ref
    (50) id_ref -> . ID
    (60) matrix_ref -> . ID [ string_of_num ]
    RETURN          shift and go to state 8
    CONTINUE        shift and go to state 10
    BREAK           shift and go to state 11
    {               shift and go to state 12
    ;               shift and go to state 9
    PRINT           shift and go to state 13
    FOR             shift and go to state 15
    WHILE           shift and go to state 17
    IF              shift and go to state 18
    ID              shift and go to state 16

    statements                     shift and go to state 39
    stmt                           shift and go to state 2
    print_stmt                     shift and go to state 3
    assign_expr                    shift and go to state 4
    for_stmt                       shift and go to state 5
    while_stmt                     shift and go to state 6
    if_stmt                        shift and go to state 7
    id_ref                         shift and go to state 14
    matrix_ref                     shift and go to state 19

state 13

    (19) print_stmt -> PRINT . print_rek ;
    (20) print_rek -> . expr
    (21) print_rek -> . print_rek , expr
    (26) expr -> . expr DOTDIV expr
    (27) expr -> . expr DOTMUL expr
    (28) expr -> . expr DOTSUB expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DIV expr
    (31) expr -> . expr MUL expr
    (32) expr -> . expr SUB expr
    (33) expr -> . expr ADD expr
    (34) expr -> . [ string_of_num ]
    (35) expr -> . [ matrix_rows ]
    (36) expr -> . ( expr )
    (37) expr -> . expr '
    (38) expr -> . SUB expr
    (39) expr -> . matrix_ref
    (40) expr -> . matrix_funcs
    (41) expr -> . relation_expr
    (42) expr -> . assign_expr
    (43) expr -> . value
    (60) matrix_ref -> . ID [ string_of_num ]
    (57) matrix_funcs -> . EYE ( INTNUM )
    (58) matrix_funcs -> . ONES ( INTNUM )
    (59) matrix_funcs -> . ZEROS ( INTNUM )
    (51) relation_expr -> . expr NEQ expr
    (52) relation_expr -> . expr EQ expr
    (53) relation_expr -> . expr GTE expr
    (54) relation_expr -> . expr LTE expr
    (55) relation_expr -> . expr GT expr
    (56) relation_expr -> . expr LT expr
    (44) assign_expr -> . id_ref DIVASSIGN expr ;
    (45) assign_expr -> . id_ref MULASSIGN expr ;
    (46) assign_expr -> . id_ref SUBASSIGN expr ;
    (47) assign_expr -> . id_ref ADDASSIGN expr ;
    (48) assign_expr -> . id_ref = expr ;
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOAT
    (25) value -> . INTNUM
    (49) id_ref -> . matrix_ref
    (50) id_ref -> . ID
    [               shift and go to state 23
    (               shift and go to state 24
    SUB             shift and go to state 22
    ID              shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    INTNUM          shift and go to state 32

    print_rek                      shift and go to state 40
    expr                           shift and go to state 41
    matrix_ref                     shift and go to state 25
    matrix_funcs                   shift and go to state 26
    relation_expr                  shift and go to state 27
    assign_expr                    shift and go to state 28
    value                          shift and go to state 29
    id_ref                         shift and go to state 14

state 14

    (44) assign_expr -> id_ref . DIVASSIGN expr ;
    (45) assign_expr -> id_ref . MULASSIGN expr ;
    (46) assign_expr -> id_ref . SUBASSIGN expr ;
    (47) assign_expr -> id_ref . ADDASSIGN expr ;
    (48) assign_expr -> id_ref . = expr ;
    DIVASSIGN       shift and go to state 42
    MULASSIGN       shift and go to state 43
    SUBASSIGN       shift and go to state 44
    ADDASSIGN       shift and go to state 45
    =               shift and go to state 46


state 15

    (16) for_stmt -> FOR . ID = id_int : id_int stmt
    ID              shift and go to state 47


state 16

    (50) id_ref -> ID .
    (60) matrix_ref -> ID . [ string_of_num ]
    DIVASSIGN       reduce using rule 50 (id_ref -> ID .)
    MULASSIGN       reduce using rule 50 (id_ref -> ID .)
    SUBASSIGN       reduce using rule 50 (id_ref -> ID .)
    ADDASSIGN       reduce using rule 50 (id_ref -> ID .)
    =               reduce using rule 50 (id_ref -> ID .)
    [               shift and go to state 48


state 17

    (15) while_stmt -> WHILE . ( relation_expr ) stmt
    (               shift and go to state 49


state 18

    (13) if_stmt -> IF . ( relation_expr ) stmt
    (14) if_stmt -> IF . ( relation_expr ) stmt ELSE stmt
    (               shift and go to state 50


state 19

    (49) id_ref -> matrix_ref .
    DIVASSIGN       reduce using rule 49 (id_ref -> matrix_ref .)
    MULASSIGN       reduce using rule 49 (id_ref -> matrix_ref .)
    SUBASSIGN       reduce using rule 49 (id_ref -> matrix_ref .)
    ADDASSIGN       reduce using rule 49 (id_ref -> matrix_ref .)
    =               reduce using rule 49 (id_ref -> matrix_ref .)


state 20

    (2) statements -> statements stmt .
    RETURN          reduce using rule 2 (statements -> statements stmt .)
    CONTINUE        reduce using rule 2 (statements -> statements stmt .)
    BREAK           reduce using rule 2 (statements -> statements stmt .)
    {               reduce using rule 2 (statements -> statements stmt .)
    ;               reduce using rule 2 (statements -> statements stmt .)
    PRINT           reduce using rule 2 (statements -> statements stmt .)
    FOR             reduce using rule 2 (statements -> statements stmt .)
    WHILE           reduce using rule 2 (statements -> statements stmt .)
    IF              reduce using rule 2 (statements -> statements stmt .)
    ID              reduce using rule 2 (statements -> statements stmt .)
    $end            reduce using rule 2 (statements -> statements stmt .)
    }               reduce using rule 2 (statements -> statements stmt .)


state 21

    (8) stmt -> RETURN expr . ;
    (26) expr -> expr . DOTDIV expr
    (27) expr -> expr . DOTMUL expr
    (28) expr -> expr . DOTSUB expr
    (29) expr -> expr . DOTADD expr
    (30) expr -> expr . DIV expr
    (31) expr -> expr . MUL expr
    (32) expr -> expr . SUB expr
    (33) expr -> expr . ADD expr
    (37) expr -> expr . '
    (51) relation_expr -> expr . NEQ expr
    (52) relation_expr -> expr . EQ expr
    (53) relation_expr -> expr . GTE expr
    (54) relation_expr -> expr . LTE expr
    (55) relation_expr -> expr . GT expr
    (56) relation_expr -> expr . LT expr
    ;               shift and go to state 51
    DOTDIV          shift and go to state 52
    DOTMUL          shift and go to state 53
    DOTSUB          shift and go to state 54
    DOTADD          shift and go to state 55
    DIV             shift and go to state 56
    MUL             shift and go to state 57
    SUB             shift and go to state 58
    ADD             shift and go to state 59
    '               shift and go to state 60
    NEQ             shift and go to state 61
    EQ              shift and go to state 62
    GTE             shift and go to state 63
    LTE             shift and go to state 64
    GT              shift and go to state 65
    LT              shift and go to state 66


state 22

    (38) expr -> SUB . expr
    (26) expr -> . expr DOTDIV expr
    (27) expr -> . expr DOTMUL expr
    (28) expr -> . expr DOTSUB expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DIV expr
    (31) expr -> . expr MUL expr
    (32) expr -> . expr SUB expr
    (33) expr -> . expr ADD expr
    (34) expr -> . [ string_of_num ]
    (35) expr -> . [ matrix_rows ]
    (36) expr -> . ( expr )
    (37) expr -> . expr '
    (38) expr -> . SUB expr
    (39) expr -> . matrix_ref
    (40) expr -> . matrix_funcs
    (41) expr -> . relation_expr
    (42) expr -> . assign_expr
    (43) expr -> . value
    (60) matrix_ref -> . ID [ string_of_num ]
    (57) matrix_funcs -> . EYE ( INTNUM )
    (58) matrix_funcs -> . ONES ( INTNUM )
    (59) matrix_funcs -> . ZEROS ( INTNUM )
    (51) relation_expr -> . expr NEQ expr
    (52) relation_expr -> . expr EQ expr
    (53) relation_expr -> . expr GTE expr
    (54) relation_expr -> . expr LTE expr
    (55) relation_expr -> . expr GT expr
    (56) relation_expr -> . expr LT expr
    (44) assign_expr -> . id_ref DIVASSIGN expr ;
    (45) assign_expr -> . id_ref MULASSIGN expr ;
    (46) assign_expr -> . id_ref SUBASSIGN expr ;
    (47) assign_expr -> . id_ref ADDASSIGN expr ;
    (48) assign_expr -> . id_ref = expr ;
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOAT
    (25) value -> . INTNUM
    (49) id_ref -> . matrix_ref
    (50) id_ref -> . ID
    [               shift and go to state 23
    (               shift and go to state 24
    SUB             shift and go to state 22
    ID              shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    INTNUM          shift and go to state 32

    expr                           shift and go to state 67
    matrix_ref                     shift and go to state 25
    matrix_funcs                   shift and go to state 26
    relation_expr                  shift and go to state 27
    assign_expr                    shift and go to state 28
    value                          shift and go to state 29
    id_ref                         shift and go to state 14

state 23

    (34) expr -> [ . string_of_num ]
    (35) expr -> [ . matrix_rows ]
    (63) string_of_num -> . string_of_num , INTNUM
    (64) string_of_num -> . INTNUM
    (61) matrix_rows -> . matrix_rows , [ string_of_num ]
    (62) matrix_rows -> . [ string_of_num ]
    INTNUM          shift and go to state 71
    [               shift and go to state 68

    string_of_num                  shift and go to state 69
    matrix_rows                    shift and go to state 70

state 24

    (36) expr -> ( . expr )
    (26) expr -> . expr DOTDIV expr
    (27) expr -> . expr DOTMUL expr
    (28) expr -> . expr DOTSUB expr
    (29) expr -> . expr DOTADD expr
    (30) expr -> . expr DIV expr
    (31) expr -> . expr MUL expr
    (32) expr -> . expr SUB expr
    (33) expr -> . expr ADD expr
    (34) expr -> . [ string_of_num ]
    (35) expr -> . [ matrix_rows ]
    (36) expr -> . ( expr )
    (37) expr -> . expr '
    (38) expr -> . SUB expr
    (39) expr -> . matrix_ref
    (40) expr -> . matrix_funcs
    (41) expr -> . relation_expr
    (42) expr -> . assign_expr
    (43) expr -> . value
    (60) matrix_ref -> . ID [ string_of_num ]
    (57) matrix_funcs -> . EYE ( INTNUM )
    (58) matrix_funcs -> . ONES ( INTNUM )
    (59) matrix_funcs -> . ZEROS ( INTNUM )
    (51) relation_expr -> . expr NEQ expr
    (52) relation_expr -> . expr EQ expr
    (53) relation_expr -> . expr GTE expr
    (54) relation_expr -> . expr LTE expr
    (55) relation_expr -> . expr GT expr
    (56) relation_expr -> . expr LT expr
    (44) assign_expr -> . id_ref DIVASSIGN expr ;
    (45) assign_expr -> . id_ref MULASSIGN expr ;
    (46) assign_expr -> . id_ref SUBASSIGN expr ;
    (47) assign_expr -> . id_ref ADDASSIGN expr ;
    (48) assign_expr -> . id_ref = expr ;
    (22) value -> . STRING
    (23) value -> . ID
    (24) value -> . FLOAT
    (25) value -> . INTNUM
    (49) id_ref -> . matrix_ref
    (50) id_ref -> . ID
    [               shift and go to state 23
    (               shift and go to state 24
    SUB             shift and go to state 22
    ID              shift and go to state 30
    EYE             shift and go to state 31
    ONES            shift and go to state 33
    ZEROS           shift and go to state 34
    STRING          shift and go to state 35
    FLOAT           shift and go to state 36
    INTNUM          shift and go to state 32

    expr                           shift and go to state 72
    matrix_ref                     shift and go to state 25
    matrix_funcs                   shift and go to state 26
    relation_expr                  shift and go to state 27
    assign_expr                    shift and go to state 28
    value                          shift and go to state 29
    id_ref                         shift and go to state 14

state 25

    (39) expr -> matrix_ref .
    (49) id_ref -> matrix_ref .
    ;               reduce using rule 39 (expr -> matrix_ref .)
    DOTDIV          reduce using rule 39 (expr -> matrix_ref .)
    DOTMUL          reduce using rule 39 (expr -> matrix_ref .)
    DOTSUB          reduce using rule 39 (expr -> matrix_ref .)
    DOTADD          reduce using rule 39 (expr -> matrix_ref .)
    DIV             reduce using rule 39 (expr -> matrix_ref .)
    MUL             reduce using rule 39 (expr -> matrix_ref .)
    SUB             reduce using rule 39 (expr -> matrix_ref .)
    ADD             reduce using rule 39 (expr -> matrix_ref .)
    '               reduce using rule 39 (expr -> matrix_ref .)
    NEQ             reduce using rule 39 (expr -> matrix_ref .)
    EQ              reduce using rule 39 (expr -> matrix_ref .)
    GTE             reduce using rule 39 (expr -> matrix_ref .)
    LTE             reduce using rule 39 (expr -> matrix_ref .)
    GT              reduce using rule 39 (expr -> matrix_ref .)
    LT              reduce using rule 39 (expr -> matrix_ref .)
    ,               reduce using rule 39 (expr -> matrix_ref .)
    )               reduce using rule 39 (expr -> matrix_ref .)
    DIVASSIGN       reduce using rule 49 (id_ref -> matrix_ref .)
    MULASSIGN       reduce using rule 49 (id_ref -> matrix_ref .)
    SUBASSIGN       reduce using rule 49 (id_ref -> matrix_ref .)
    ADDASSIGN       reduce using rule 49 (id_ref -> matrix_ref .)
    =               reduce using rule 49 (id_ref -> matrix_ref .)


state 26

    (40) expr -> matrix_funcs .
    ;               reduce using rule 40 (expr -> matrix_funcs .)
    DOTDIV          reduce using rule 40 (expr -> matrix_funcs .)
    DOTMUL          reduce using rule 40 (expr -> matrix_funcs .)
    DOTSUB          reduce using rule 40 (expr -> matrix_funcs .)
    DOTADD          reduce using rule 40 (expr -> matrix_funcs .)
    DIV             reduce using rule 40 (expr -> matrix_funcs .)
    MUL             reduce using rule 40 (expr -> matrix_funcs .)
    SUB             reduce using rule 40 (expr -> matrix_funcs .)
    ADD             reduce using rule 40 (expr -> matrix_funcs .)
    '               reduce using rule 40 (expr -> matrix_funcs .)
    NEQ             reduce using rule 40 (expr -> matrix_funcs .)
    EQ              reduce using rule 40 (expr -> matrix_funcs .)
    GTE             reduce using rule 40 (expr -> matrix_funcs .)
    LTE             reduce using rule 40 (expr -> matrix_funcs .)
    GT              reduce using rule 40 (expr -> matrix_funcs .)
    LT              reduce using rule 40 (expr -> matrix_funcs .)
    ,               reduce using rule 40 (expr -> matrix_funcs .)
    )               reduce using rule 40 (expr -> matrix_funcs .)


state 27
